[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Pig.gd" type="Script" id=1]
[ext_resource path="res://Images/lifebar_bg.png" type="Texture" id=3]
[ext_resource path="res://Images/lifebar_fill.png" type="Texture" id=4]
[ext_resource path="res://Sprites/fog.png" type="Texture" id=5]
[ext_resource path="res://Sprites/pig.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 628, 0, 628, 314 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1256, 0, 628, 314 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 628, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1256, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 375, 375 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 375, 0, 375, 375 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 0, 375, 375 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 375, 375, 375 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 375, 375, 375, 375 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 375, 375, 375 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 750, 375, 375 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 375, 750, 375, 375 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 750, 750, 375, 375 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 628, 314 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 628, 0, 628, 314 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1256, 0, 628, 314 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 628, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1256, 314, 628, 314 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 628, 628, 314 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 628, 628, 628, 314 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "disappear",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=24]
radius = 89.7198
height = 66.2057

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 26.1619, 10 )

[node name="Pig" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( -100, 502 )
scale = Vector2( 0.4, 0.4 )
collision_layer = 256
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 13.1099, 25.0263 )
scale = Vector2( -1, 1 )
frames = SubResource( 23 )
animation = "run"
frame = 5
playing = true

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 0, 14.2858 )
scale = Vector2( 1.42857, 1.42857 )
collision_mask = 102

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
position = Vector2( -10.3659, -3.30383 )
rotation = -1.5708
shape = SubResource( 24 )

[node name="move_tween" type="Tween" parent="."]

[node name="Energybar" type="TextureProgress" parent="."]
margin_left = -100.307
margin_top = -184.505
margin_right = 295.693
margin_bottom = -131.505
rect_scale = Vector2( 0.6, 0.5 )
max_value = 2.0
value = 2.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feet" type="CollisionShape2D" parent="."]
position = Vector2( 18.661, 171.322 )
shape = SubResource( 25 )
[connection signal="jump" from="." to="." method="_on_Pig_jump"]
[connection signal="body_entered" from="AnimatedSprite/Area2D" to="." method="_on_Area2D_body_entered"]
